-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The slow rate of changelog consumption is probably the biggest issue for Robinhood deployments. So let's try emit as few changelog records as are necessary. AFAICT we can omit changelogs for volatile files without affecting RBH. As for other changelog consumers, who knows? rsync? Are there others?
- is related to
-
LU-6449 Broadcast HSM remove requests with undetermined archive_id to all registered copytools
-
- Resolved
-